// Vitest Snapshot v1

exports[`HtmlOverlay is able to handle a null child with other valid children 1`] = `
<div
  style={
    {
      "height": "100%",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <HtmlOverlayItem
    coordinates={
      [
        0,
        0,
        0,
      ]
    }
    x={0}
    y={0}
  >
    Map Center Zero Elevation
  </HtmlOverlayItem>
  <HtmlOverlayItem
    coordinates={
      [
        0,
        0,
        50000,
      ]
    }
    x={0}
    y={0}
  >
    Map Center 50km Elevation
  </HtmlOverlayItem>
</div>
`;

exports[`HtmlOverlay is able to handle a single null child 1`] = `
<div
  style={
    {
      "height": "100%",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;

exports[`HtmlOverlay is able to handle no children 1`] = `
<div
  style={
    {
      "height": "100%",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;
